--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,3 +1,16 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p,
+a {
+
+    font-family: 'Saira', sans-serif;
+    /* rest css code also here */
+}
